Project mundiales_model {
  database_type: 'SQLServer'
  Note: 'Modelo estrictamente normalizado alineado con sqlserver_schema.sql (T-SQL)'
}

Enum tipo_tarjeta {
  amarilla
  roja
}

Enum seccion_aparicion {
  titular
  ingresado
  suplente_no_jugo
}

Enum source_table_resolucion {
  gol
  tarjeta
  cambio_entrada
  cambio_salida
  penal
}

Table mundial {
  anio integer [pk]
  sede text
  equipos integer
  partidos_jugados integer
  goles_total integer
}

Table seleccion {
  seleccion_id bigint [pk]
  nombre text [not null, unique]
}

Table seleccion_alias {
  alias_nombre text [pk]
  seleccion_id bigint [not null]
}

Table jugador {
  jugador_id bigint [pk]
  nombre text [not null]
  nombre_completo text
  fecha_nacimiento text
  lugar_nacimiento text
  altura text
  apodo text
  sitio_web text
  redes_sociales text
}

Table entrenador {
  entrenador_id bigint [pk]
  nombre text [not null, unique]
}

Table partido {
  partido_id bigint [pk]
  anio integer [not null]
  fecha text
  etapa text
  local_seleccion_id bigint [not null]
  visitante_seleccion_id bigint [not null]
  goles_local integer
  goles_visitante integer
  tiempo_extra boolean [not null, default: false]
  definicion_penales boolean [not null, default: false]
  penales_local integer
  penales_visitante integer

  Indexes {
    (anio, fecha, etapa, local_seleccion_id, visitante_seleccion_id) [unique]
  }
}

Table aparicion_partido {
  partido_id bigint [not null]
  seleccion_id bigint [not null]
  jugador_id bigint [not null]
  posicion text
  camiseta text
  seccion seccion_aparicion [not null]
  es_capitan boolean [not null, default: false]

  Indexes {
    (partido_id, seleccion_id, jugador_id, seccion) [pk]
  }
}

Table direccion_tecnica_partido {
  partido_id bigint [not null]
  seleccion_id bigint [not null]
  entrenador_id bigint [not null]

  Indexes {
    (partido_id, seleccion_id, entrenador_id) [pk]
  }
}

Table gol {
  gol_id bigint [pk]
  partido_id bigint [not null]
  seleccion_id bigint [not null]
  jugador_id bigint
  minuto text
  es_penal boolean [not null, default: false]
  es_autogol boolean [not null, default: false]
}

Table tarjeta {
  tarjeta_id bigint [pk]
  partido_id bigint [not null]
  seleccion_id bigint
  jugador_id bigint
  tipo tipo_tarjeta [not null]
  minuto text
}

Table cambio {
  cambio_id bigint [pk]
  partido_id bigint [not null]
  seleccion_id bigint [not null]
  jugador_sale_id bigint
  jugador_entra_id bigint
  minuto text
}

Table penal {
  penal_id bigint [pk]
  partido_id bigint [not null]
  seleccion_id bigint [not null]
  orden integer [not null]
  jugador_id bigint
  resultado text [not null]

  Indexes {
    (partido_id, seleccion_id, orden) [unique]
  }
}

Table grupo {
  anio integer [not null]
  grupo text [not null]
  posicion integer
  seleccion_id bigint [not null]
  pts integer
  pj integer
  pg integer
  pe integer
  pp integer
  gf integer
  gc integer
  dif integer
  clasificado boolean

  Indexes {
    (anio, grupo, seleccion_id) [pk]
  }
}

Table posicion_final {
  anio integer [not null]
  posicion integer [not null]
  seleccion_id bigint [not null]

  Indexes {
    (anio, posicion, seleccion_id) [pk]
    (anio)
    (anio, posicion)
  }
}

Table goleador {
  anio integer [not null]
  jugador_id bigint [not null]
  seleccion_id bigint
  goles integer

  Indexes {
    (anio, jugador_id) [pk]
  }
}

Table premio_jugador {
  anio integer [not null]
  premio text [not null]
  jugador_id bigint [not null]
  seleccion_id bigint

  Indexes {
    (anio, premio, jugador_id) [pk]
  }
}

Table premio_seleccion {
  anio integer [not null]
  premio text [not null]
  seleccion_id bigint [not null]

  Indexes {
    (anio, premio, seleccion_id) [pk]
  }
}

Table plantel_jugador {
  anio integer [not null]
  seleccion_id bigint [not null]
  jugador_id bigint [not null]
  posicion text
  camiseta text
  club text

  Indexes {
    (anio, seleccion_id, jugador_id) [pk]
  }
}

Table plantel_entrenador {
  anio integer [not null]
  seleccion_id bigint [not null]
  entrenador_id bigint [not null]

  Indexes {
    (anio, seleccion_id, entrenador_id) [pk]
  }
}

Table participacion_mundial {
  participacion_id bigint [pk, increment]
  anio integer [not null]
  seleccion_id bigint [not null]
  posicion integer
  etapa text
  pts integer
  pj integer
  pg integer
  pe integer
  pp integer
  gf integer
  gc integer
  dif integer
  participo boolean [not null, default: true]

  Indexes {
    (anio)
    (anio, seleccion_id)
  }
}

Table resolucion_identidad_jugador {
  resolucion_id bigint [pk, increment]
  source_table source_table_resolucion [not null]
  source_event_id bigint [not null]
  partido_id bigint
  seleccion_id bigint
  jugador_nombre_raw text [not null]
  minuto text
  metodo text [not null, default: 'manual']
  confianza decimal(5,2)
  notas text

  Indexes {
    (source_table, source_event_id) [unique]
  }
}

Ref: seleccion_alias.seleccion_id > seleccion.seleccion_id
Ref: partido.anio > mundial.anio
Ref: partido.local_seleccion_id > seleccion.seleccion_id
Ref: partido.visitante_seleccion_id > seleccion.seleccion_id
Ref: aparicion_partido.partido_id > partido.partido_id
Ref: aparicion_partido.seleccion_id > seleccion.seleccion_id
Ref: aparicion_partido.jugador_id > jugador.jugador_id
Ref: direccion_tecnica_partido.partido_id > partido.partido_id
Ref: direccion_tecnica_partido.seleccion_id > seleccion.seleccion_id
Ref: direccion_tecnica_partido.entrenador_id > entrenador.entrenador_id
Ref: gol.partido_id > partido.partido_id
Ref: gol.seleccion_id > seleccion.seleccion_id
Ref: gol.jugador_id > jugador.jugador_id
Ref: tarjeta.partido_id > partido.partido_id
Ref: tarjeta.seleccion_id > seleccion.seleccion_id
Ref: tarjeta.jugador_id > jugador.jugador_id
Ref: cambio.partido_id > partido.partido_id
Ref: cambio.seleccion_id > seleccion.seleccion_id
Ref: cambio.jugador_sale_id > jugador.jugador_id
Ref: cambio.jugador_entra_id > jugador.jugador_id
Ref: penal.partido_id > partido.partido_id
Ref: penal.seleccion_id > seleccion.seleccion_id
Ref: penal.jugador_id > jugador.jugador_id
Ref: grupo.anio > mundial.anio
Ref: grupo.seleccion_id > seleccion.seleccion_id
Ref: posicion_final.anio > mundial.anio
Ref: posicion_final.seleccion_id > seleccion.seleccion_id
Ref: goleador.anio > mundial.anio
Ref: goleador.jugador_id > jugador.jugador_id
Ref: goleador.seleccion_id > seleccion.seleccion_id
Ref: premio_jugador.anio > mundial.anio
Ref: premio_jugador.jugador_id > jugador.jugador_id
Ref: premio_jugador.seleccion_id > seleccion.seleccion_id
Ref: premio_seleccion.anio > mundial.anio
Ref: premio_seleccion.seleccion_id > seleccion.seleccion_id
Ref: plantel_jugador.anio > mundial.anio
Ref: plantel_jugador.seleccion_id > seleccion.seleccion_id
Ref: plantel_jugador.jugador_id > jugador.jugador_id
Ref: plantel_entrenador.anio > mundial.anio
Ref: plantel_entrenador.seleccion_id > seleccion.seleccion_id
Ref: plantel_entrenador.entrenador_id > entrenador.entrenador_id
Ref: participacion_mundial.anio > mundial.anio
Ref: participacion_mundial.seleccion_id > seleccion.seleccion_id
Ref: resolucion_identidad_jugador.partido_id > partido.partido_id
Ref: resolucion_identidad_jugador.seleccion_id > seleccion.seleccion_id